# ml-research-kills-alpha

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_mrka.sh
docs/: mkdocs.yml
docs/docs/: index.md
ml_research_kills_alpha/: LICENSE  Makefile  README.md  __init__.py  config.py  pyproject.toml
ml_research_kills_alpha/datasets/: chen_zimmermann.py  crsp_stock.py  data_pipeline.py  download.py  useful_files.py  welch_goyal.py
ml_research_kills_alpha/datasets/data/: ff_industry_classification.json
ml_research_kills_alpha/datasets/processed/: __init__.py  chen_zimmermann.py  cleaner.py  crsp_stock.py  paper_collector.py
ml_research_kills_alpha/datasets/raw/: __init__.py  chen_zimmermann.py  crsp_stock.py  download.py  welch_goyal.py
ml_research_kills_alpha/docs/docs/: index.md
ml_research_kills_alpha/modeling/: base_model.py  elastic_net.py  ensemble.py  huber_ols.py  neural_networks.py  portfolio.py  prediction_pipeline.py  rolling_trainer.py  run_experiment.py  run_model_parallel.py  temp_files.py
ml_research_kills_alpha/modeling/algorithms/: __init__.py  base_model.py  elastic_net.py  ensemble.py  huber_ols.py  lasso.py  lstm.py  neural_networks.py  random_forest.py  ridge.py  xgboost.py
ml_research_kills_alpha/modeling/portfolio/: helpers.py
ml_research_kills_alpha/reports/: generate_latex.py  generate_reports.py
ml_research_kills_alpha/src/: __init__.py
ml_research_kills_alpha/support/: __init__.py  constants.py  logger.py  vm_connect.py  wrds_connection.py
models/backtests/: backtest_ENET.csv  backtest_OLS-H.csv  (+1 more)
notebooks/: ft_160925.ipynb
reports/: body.tex  commands.tex  informs3.cls  packages.tex
slurm/: predict_cpu.sbatch  predict_gpu.sbatch
(+3 files in other folders)
